forEnersys/nthing Salesforce CPQ/objects/PriceCondition__c.object
<CustomObject>
    <customHelpPage>PriceConditionHelp</customHelpPage>
    <description>Condition that fires the parent price rule.</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DistributorDiscount__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Discount__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Status__c</fullName>
                </value>
                <value>
                    <fullName>Rental_Rate__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ContractedPrice__c</fullName>
                </value>
                <value>
                    <fullName>SBU__c</fullName>
                </value>
                <value>
                    <fullName>Lead_Time__c</fullName>
                </value>
                <value>
                    <fullName>LOB__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Required_Final__c</fullName>
                </value>
                <value>
                    <fullName>Effective_Discount__c</fullName>
                </value>
                <value>
                    <fullName>CostPrice__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FilterFormula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Filter Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FilterType__c</fullName>
        <description>Type of filtering used in this condition.</description>
        <inlineHelpText>Choose Variable to evaluate this condition against a Summary Variable; otherwise, choose Value.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that filters this condition.</description>
        <inlineHelpText>Select the Summary Variable you want this condition to use as a filter.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SummaryVariable__c</referenceTo>
        <relationshipLabel>Filtered Price Conditions</relationshipLabel>
        <relationshipName>FilteredPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Price Rule&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Price Rule&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Summary Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The operator that is applied when comparing the Field with the Value.</description>
        <inlineHelpText>Select the operator to apply when comparing the Field with the Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentRuleIsActive__c</fullName>
        <formula>Rule__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(Rule__r.TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(Rule__r.TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Price rule running this condition.</description>
        <inlineHelpText>Price rule running this condition.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>PriceRule__c</referenceTo>
        <relationshipLabel>Price Conditions</relationshipLabel>
        <relationshipName>PriceConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestedFormula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Tested Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable tested when evaluating this price condition.</description>
        <inlineHelpText>Summary variable tested by this price condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedPriceConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value to evaluate against.</description>
        <inlineHelpText>Enter the value you want to match in the field you selected using the operator chosen.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Condition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Filter_formula_field_null</fullName>
        <active>true</active>
        <description>Require Filter Formula when Filter Type is Formula.</description>
        <errorConditionFormula>AND(ISPICKVAL(FilterType__c, &quot;Formula&quot;), ISBLANK(FilterFormula__c))</errorConditionFormula>
        <errorMessage>If Filter Type is Formula, then Filter Formula cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tested_field_or_variable</fullName>
        <active>true</active>
        <description>Require either tested field or variable.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Field__c)),ISBLANK(TestedVariable__c),ISBLANK(TestedFormula__c))</errorConditionFormula>
        <errorMessage>You must specify either field or tested variable.</errorMessage>
    </validationRules>
</CustomObject>